@@ -1,2 +1,7 @@
 # flake8: noqa: F401
-from . import background, brightness, haralick, moments
+from . import feat_background, feat_brightness, feat_moments, feat_texture
+from .event_extractor_manager_thread import EventExtractorManagerThread
+from .queue_event_extractor import (
+    QueueEventExtractor, EventExtractorThread, EventExtractorProcess
+)
+from .gate import Gate
