@@ -3,7 +3,7 @@ import pathlib
 import h5py
 import numpy as np
 
-from dcnum.feat import brightness
+from dcnum.feat import feat_brightness
 
 from helper_methods import retrieve_data
 
@@ -16,7 +16,7 @@ def test_basic_brightness():
                          "fmt-hdf5_cytoshot_full-features_2023.zip")
     # Make data available
     with h5py.File(path) as h5:
-        data = brightness.brightness_features(
+        data = feat_brightness.brightness_features(
             image=h5["events/image"][:],
             image_bg=h5["events/image_bg"][:],
             mask=h5["events/mask"][:],
@@ -25,7 +25,7 @@ def test_basic_brightness():
         assert np.allclose(data["bright_bc_avg"][1],
                            -43.75497215592681,
                            atol=0, rtol=1e-10)
-        for feat in brightness.brightness_names:
+        for feat in feat_brightness.brightness_names:
             assert np.allclose(h5["events"][feat][:],
                                data[feat]), f"Feature {feat} mismatch!"
         # control test
