@@ -3,7 +3,7 @@ import pathlib
 import h5py
 import numpy as np
 
-from dcnum.feat import haralick
+from dcnum.feat import feat_texture
 
 from helper_methods import retrieve_data
 
@@ -16,7 +16,7 @@ def test_basic_haralick():
                          "fmt-hdf5_cytoshot_full-features_2023.zip")
     # Make data available
     with h5py.File(path) as h5:
-        ret_arr = haralick.haralick_texture_features(
+        ret_arr = feat_texture.haralick_texture_features(
             image=h5["events/image"][:],
             image_bg=h5["events/image_bg"][:],
             mask=h5["events/mask"][:],
@@ -25,7 +25,7 @@ def test_basic_haralick():
         assert np.allclose(ret_arr["tex_asm_avg"][1],
                            0.001514295993357114,
                            atol=0, rtol=1e-10)
-        for feat in haralick.haralick_names:
+        for feat in feat_texture.haralick_names:
             assert np.allclose(h5["events"][feat],
                                ret_arr[feat])
         # control test
