@@ -3,7 +3,7 @@ import pathlib
 import h5py
 import numpy as np
 
-from dcnum.feat import moments
+from dcnum.feat import feat_moments
 
 from helper_methods import retrieve_data
 
@@ -32,7 +32,7 @@ def test_moments_based_features():
 
     # Make data available
     with h5py.File(path) as h5:
-        data = moments.moments_based_features(
+        data = feat_moments.moments_based_features(
             mask=h5["events/mask"][:],
             pixel_size=0.2645
         )
