@@ -1,6 +1,7 @@
 0.0.8
  - feat: introduce QueueCollectorThread
  - feat: introduce SegmenterManagerThread
+ - feat: instroduce EventExtractorManagerThread and corresponding workers
  - enh: minor improvements for HDF5ImageCache and ImageCorrCache
  - enh: use data size as cache size if smaller than requested chunk size
  - enh: return dictionary for brightness feature computation
@@ -9,6 +10,7 @@
  - enh: make sure that masks are written as uint8 to HDF5 files
  - ref: haralick texture computation now returns dict instead of recarray
  - ref: renamed HDF5WriterThread to DequeWriterThread
+ - ref: renamed feature submodules (prepended "feat_")
 0.0.7
  - enh: dataset keyword arguments and mode HDF5WriterThread
  - enh: speed-up of brightness feature computation
